--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <title>@ViewData["Title"] - PatientManagementSystem</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/toastr.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/custom.css">
     @RenderSection("Styles", required: false)
 </head>
@@ -70,7 +71,7 @@
     @await RenderSectionAsync("Scripts", required: false)
 
 
-<script src="~/js/toastr.css"></script>
+<script src="~/js/toastr.js"></script>
 
 @if (TempData["Message"] != null)
 {
